--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 venv/
 env/
 ENV/
+.venv/
 
 # IDE
 .vscode/
@@ -16,3 +17,30 @@ ENV/
 
 # OS
 .DS_Store
+
+# Testing and Coverage
+.pytest_cache/
+.coverage
+htmlcov/
+coverage.xml
+*.cover
+.hypothesis/
+
+# Type checking
+.mypy_cache/
+.pytype/
+.pyre/
+.pyright/
+
+# Linting
+.ruff_cache/
+
+# uv
+uv.lock
+.python-version
+
+# Build artifacts
+build/
+dist/
+*.egg-info/
+*.egg
